--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-<!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOVA | Inicio</title>
+    <title>Document</title>
+
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
-        <div>
-            <a href="">Nova</a>
+        <div class="logo">
+            <a href="./index.html">Nova</a>
         </div>
-        <ul>
+        <ul class="nav-links">
             <li><a href="">Inicio</a></li>
             <li><a href="">Servicios</a></li>
             <li><a href="">Proyectos</a></li>
             <li><a href="">Acerca de</a></li>
             <li><a href="">Blog</a></li>
         </ul>
-        <div>
+        <div class="btn-contacto">
             <a href="">Contacto</a>
         </div>
     </nav>
 
-    <header>
+    <header class="hero-inicio">
         <h1>Transforma tus ideas en experiencias innovadoras</h1>
         <p>En Nova, fusionamos creatividad y tecnología para impulsar tu marca. Descubre cómo podemos ayudarte a destacar en el mercado.</p>
-        <div></div>
+        <div class="btn-inicio">
+            <a href="">Explorar</a>
+        </div>
     </header>
 
     <main>
@@ -65,12 +68,12 @@
             <p>Contacto</p>
             <h2>¡Conéctate con nosotros!</h2>
             <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div></div>
+            <div>¡Hablemos!@</div>
         </section>
     </main>
 
     <footer>
-        
+        <p></p>
     </footer>
 </body>
 </html>
