--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <nav>
@@ -23,27 +24,41 @@
         </div>
     </nav>
 
-    <header class="hero-inicio">
-        <h1>Transforma tus ideas en experiencias innovadoras</h1>
-        <p>En Nova, fusionamos creatividad y tecnología para impulsar tu marca. Descubre cómo podemos ayudarte a destacar en el mercado.</p>
-        <div class="btn-inicio">
-            <a href="">Explorar</a>
+    <header class="hero">
+        <div class="hero-contenido">
+            <h1>Transforma tus ideas en experiencias innovadoras</h1>
+            <p>En Nova, fusionamos creatividad y tecnología para impulsar tu marca.<br>Descubre cómo podemos ayudarte a destacar en el mercado.</p>
+        </div>
+        <div class="btn-hero">
+            <a href=""><i class="las la-arrow-down"></i>Explorar</a>
         </div>
     </header>
 
     <main>
-        <section>
-            <p>Servicios</p>
-            <h2>Nuestras soluciones Ccreativas</h2>
-            <p>Explora nuestros servicios diseñados para llevar tu proyecto al siguiente nivel.</p>
-            <div></div>
-            <div></div>
+        <section class="sec-servicios">
+            <div class="s-serv-contenido">
+                <p class="min-text">Servicios</p>
+                <h2>Nuestras soluciones creativas</h2>
+                <p>Explora nuestros servicios diseñados para llevar tu proyecto al siguiente nivel.</p>
+                <div class="btn-vm">
+                    <a href="">Ver más<i class="las la-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="s-serv-img">
+                <div class="serv-1">
+                    <p>Diseño<br>gráfico</p>
+                </div>
+                <div class="serv-2">
+                    <p>Desarrollo<br>web</p>
+                </div>
+                <div class="serv-3">
+                    <p>Marketing<br>digital</p>
+                </div>
+            </div>
         </section>
-
-        <section></section>
         
         <section>
-            <p>Proyectos destacados</p>
+            <p class="min-text">Proyectos destacados</p>
             <h2>Proyectos en los que estamos orgullosos</h2>
             <p>Descubre cómo hemos transformado las ideas de nuestros clientes en éxitos tangibles.</p>
             <div></div>
