--- a/index.html
+++ b/index.html
@@ -2,93 +2,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova | Inicio</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nova-style.css">
     <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            <a href="./index.html">Nova</a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Servicios</a></li>
-            <li><a href="">Proyectos</a></li>
-            <li><a href="">Acerca de</a></li>
-            <li><a href="">Blog</a></li>
-        </ul>
-        <div class="btn-contacto">
-            <a href="">Contacto</a>
-        </div>
-    </nav>
-
-    <header class="hero">
-        <div class="hero-contenido">
-            <h1>Transforma tus ideas en experiencias innovadoras</h1>
-            <p>En Nova, fusionamos creatividad y tecnología para impulsar tu marca.<br>Descubre cómo podemos ayudarte a destacar en el mercado.</p>
-        </div>
-        <div class="btn-hero">
-            <a href=""><i class="las la-arrow-down"></i>Explorar</a>
-        </div>
+    <header>
+        <nav>
+            <div class="logo-site">
+                <a href="">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="">inicio</a></li>
+                <li><a href="">Servicios</a></li>
+                <li><a href="">Proyectos</a></li>
+                <li><a href="">Acerca de</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+            <div class="btn-black">
+                <a href="">Contacto</a>
+            </div>
+        </nav>
     </header>
 
     <main>
-        <section class="sec-servicios">
-            <div class="s-serv-contenido">
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Transforma tus ideas en experiencias innovadoras</h1>
+                <p>En Nova, fusionamos creatividad y tecnología para impulsar tu marca.<br>Descubre cómo podemos ayudarte a destacar en el mercado.</p>
+            </div>
+            <div class="btn-explore">
+                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+            </div>
+        </section>
+
+        <section class="services">
+            <div class="services-content">
                 <p class="min-text">Servicios</p>
-                <h2>Nuestras soluciones creativas</h2>
+                <h2>Nuestras<br>soluciones creativas</h2>
                 <p>Explora nuestros servicios diseñados para llevar tu proyecto al siguiente nivel.</p>
                 <div class="btn-vm">
-                    <a href="">Ver más<i class="las la-arrow-right"></i></a>
+                    <a href="">Ver más<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
-            <div class="s-serv-img">
-                <div class="serv-1">
-                    <p>Diseño<br>gráfico</p>
+            <div class="services-img-content">
+                <div class="img-service-1">
+                    <p>Diseño gráfico</p>
                 </div>
-                <div class="serv-2">
-                    <p>Desarrollo<br>web</p>
+                <div class="img-service-2">
+                    <p>Desarrollo web</p>
                 </div>
-                <div class="serv-3">
-                    <p>Marketing<br>digital</p>
+                <div class="img-service-3">
+                    <p>Marketing digital</p>
                 </div>
             </div>
         </section>
-        
-        <section>
-            <p class="min-text">Proyectos destacados</p>
-            <h2>Proyectos en los que estamos orgullosos</h2>
-            <p>Descubre cómo hemos transformado las ideas de nuestros clientes en éxitos tangibles.</p>
-            <div></div>
-            <div></div>
+
+        <section class="projects">
+            <div class="projects-content">
+                <p class="min-text">Proyectos destacados</p>
+                <h2>Proyectos en los<br>que estamos orgullosos</h2>
+                <p>Descubre cómo hemos transformado las ideas de<br>nuestros clientes en éxitos tangibles.</p>
+                <div class="btn-vm">
+                    <a href="">Ver más<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
+            <div class="projects-img-content">
+                <div class="img-project-1">
+                    <h2>Fashion hub</h2>
+                    <div class="btn-explore">
+                        <a href="">Explorar</a>
+                    </div>
+                </div>
+                <div class="img-project-2">
+                    <h2>Learn online</h2>
+                    <div class="btn-explore">
+                        <a href="">Explorar</a>
+                    </div>
+                </div>
+                <div class="img-project-3">
+                    <h2>Artisan crafts</h2>
+                    <div class="btn-explore">
+                        <a href="">Explorar</a>
+                    </div>
+                </div>
+            </div>
         </section>
 
-        <section>
-            <p>Testimonios</p>
-            <h2>Lo que dicen nuestros clientes</h2>
-            <p>Escucha de primera mano cómo hemos impactado positivamente en los proyectos de nuestros clientes.</p>
-            <div></div>
+        <section class="testimonials">
+            <div class="testimonials-content">
+                <p class="min-text">Testimonios</p>
+                <h2>Lo que dicen nuestros clientes</h2>
+                <p>Escucha de primera mano cómo hemos impactado positivamente en los proyectos de nuestros clientes.</p>
+            </div>
+            <div class="testimonials-clients">
+
+            </div>
         </section>
 
-        <section>
-            <p>Blog</p>
-            <h2>Mantente al día con las últimas tendencias y consejos en nuestra industria</h2>
-            <div></div>
-            <div></div>
+        <section class="blogs">
+            <div class="blogs-content">
+                <p class="min-text"></p>
+                <h2>Mantente al día con las últimas tendencias y consejos en nuestra industria</h2>
+                <div class="btn-vm">
+                    <a href="">Ver más<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
+            <div class="blogs-img-content">
+                <div class="img-blog-1">
+                    <div class="btn-arrow"></div>
+                    <h3></h3>
+                </div>
+                <div class="img-blog-2">
+                    <div class="btn-arrow"></div>
+                    <h3></h3>
+                </div>
+                <div class="img-blog-3">
+                    <div class="btn-arrow"></div>
+                    <h3></h3>
+                </div>
+            </div>
         </section>
 
-        <section>
-            <p>Contacto</p>
-            <h2>¡Conéctate con nosotros!</h2>
-            <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div>¡Hablemos!@</div>
+        <section class="contact">
+            <div class="contact-content">
+                <p class="min-text"></p>
+                <h2>¡Conéctate con nosotros!</h2>
+                <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
+                <div class="btn-contact">
+                    <a href=""></a>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p></p>
+
     </footer>
 </body>
 </html>
