--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -4,14 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <header>
-        <h1>Proyectos en acción</h1>
-        <p>En Nova, cada proyecto es una oportunidad para demostrar nuestra creatividad y compromiso con la excelencia. Aquí te mostramos algunos de nuestros trabajos más destacados que reflejan la diversidad y calidad de nuestros servicios.</p>
-        <div></div>
+        <nav>
+            <div class="logo-site">
+                <a href="">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="">inicio</a></li>
+                <li><a href="">Servicios</a></li>
+                <li><a href="">Proyectos</a></li>
+                <li><a href="">Acerca de</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+            <div class="btn-black">
+                <a href="">Contacto</a>
+            </div>
+        </nav>
     </header>
+    
     <main>
+        <section>
+            <h1>Proyectos en acción</h1>
+            <p>En Nova, cada proyecto es una oportunidad para demostrar nuestra creatividad y compromiso con la excelencia. Aquí te mostramos algunos de nuestros trabajos más destacados que reflejan la diversidad y calidad de nuestros servicios.</p>
+            <div></div>
+        </section>
+
         <section>
             <h2>Fashion hub</h2>
             <p>Creamos una identidad visual y estrategia de marketing digital para una boutique de moda. Esto resultó en un aumento del tráfico en redes sociales y mayores ventas en la tienda.</p>
