--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <header>
-        <p>Servicios</p>
-        <h1>soluciones creativas</h1>
-        <p>En Nova, ofrecemos servicios creativos que hacen que tu marca destaque en el mercado. Cada servicio está adaptado para garantizar resultados excepcionales.</p>
+        <nav>
+            <div class="logo-site">
+                <a href="">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="">inicio</a></li>
+                <li><a href="">Servicios</a></li>
+                <li><a href="">Proyectos</a></li>
+                <li><a href="">Acerca de</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+            <div class="btn-black">
+                <a href="">Contacto</a>
+            </div>
+        </nav>
     </header>
 
     <main>
+        <section>
+            <p>Servicios</p>
+            <h1>soluciones creativas</h1>
+            <p>En Nova, ofrecemos servicios creativos que hacen que tu marca destaque en el mercado. Cada servicio está adaptado para garantizar resultados excepcionales.</p>
+        </section>
+
         <section></section>
+
         <section>
             <div>
                 <h2>Diseño gráfico</h2>
