--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <section class="blogs">
             <div class="blogs-content">
-                <p class="min-text"></p>
+                <p class="min-text">Blog</p>
                 <h2>Mantente al día con las últimas tendencias y consejos en nuestra industria</h2>
                 <div class="btn-vm">
                     <a href="">Ver más<i class="las la-arrow-down"></i></a>
@@ -181,27 +181,27 @@
             </div>
             <div class="blogs-img-content">
                 <div class="img-blog-1">
-                    <div class="btn-arrow"></div>
-                    <h3></h3>
+                    <i class="las la-arrow-down btn-arrow"></i>
+                    <h3>¿Cómo mejorar la experiencia del usuario en tu sitio web?</h3>
                 </div>
                 <div class="img-blog-2">
-                    <div class="btn-arrow"></div>
-                    <h3></h3>
+                    <i class="las la-arrow-down btn-arrow"></i>
+                    <h3>Introducción a la realidad aumentada en aplicaciones móviles</h3>
                 </div>
                 <div class="img-blog-3">
-                    <div class="btn-arrow"></div>
-                    <h3></h3>
+                    <i class="las la-arrow-down btn-arrow"></i>
+                    <h3>Impacto de la inteligencia artificial en el marketing digital</h3>
                 </div>
             </div>
         </section>
 
         <section class="contact">
             <div class="contact-content">
-                <p class="min-text"></p>
+                <p class="min-text">Contacto</p>
                 <h2>¡Conéctate con nosotros!</h2>
-                <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
+                <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href=""></a>
+                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
