--- a/index.html
+++ b/index.html
@@ -208,7 +208,35 @@
     </main>
 
     <footer>
-
+        <div class="footer-content">
+            <div class="column-name-site">
+                <h3>Nova</h3>
+                <p>En Nova, fusionamos innovación y creatividad para ofrecer soluciones tecnológicas y de diseño digital únicas, adaptadas a las necesidades de cada cliente.</p>
+            </div>
+            <div class="column-list">
+                <h3>Páginas</h3>
+                <ul>
+                    <li><a href="">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Contacto<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+            <div class="column-list">
+                <h3>Siguenos</h3>
+                <ul>
+                    <li><a href="">Instagram<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Facebook<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Twitter<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Linkedin<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
