--- a/paginas/acerca-de.html
+++ b/paginas/acerca-de.html
@@ -3,17 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova | Acerca de</title>
+
+    <link rel="stylesheet" href="../css/nova-style.css">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 <body>
     <header>
-        <p>Acerca de</p>
-        <h1>Nova</h1>
-        <p>En Nova, creemos que la creatividad es la chispa que impulsa el éxito de cada marca. Desde nuestra fundación, nos hemos dedicado a ofrecer soluciones innovadoras que ayudan a nuestros clientes a destacar en un mercado competitivo.</p>
-        <div></div>
+        <nav>
+            <div class="logo-site">
+                <a href="">Nova</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="">inicio</a></li>
+                <li><a href="">Servicios</a></li>
+                <li><a href="">Proyectos</a></li>
+                <li><a href="">Acerca de</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+            <div class="btn-black">
+                <a href="">Contacto</a>
+            </div>
+        </nav>
     </header>
 
     <main>
+        <section>
+            <p>Acerca de</p>
+            <h1>Nova</h1>
+            <p>En Nova, creemos que la creatividad es la chispa que impulsa el éxito de cada marca. Desde nuestra fundación, nos hemos dedicado a ofrecer soluciones innovadoras que ayudan a nuestros clientes a destacar en un mercado competitivo.</p>
+            <div></div>
+        </section>
+
         <section></section>
 
         <section>
@@ -60,12 +81,48 @@
             <div></div>
         </section>
 
-        <section>
-            <p>Contacto</p>
-            <h2>¡Conéctate con nosotros!</h2>
-            <p>Estamos aquí para ayudarte. Ponte en contacto para cualquier consulta o proyecto. ¡Nos encantaría saber de ti!</p>
-            <div></div>
+        <section class="contact">
+            <div class="contact-content">
+                <p class="min-text">Contacto</p>
+                <h2>¡Conéctate con nosotros!</h2>
+                <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
+                <div class="btn-contact">
+                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="column-name-site">
+                <h3>Nova</h3>
+                <p>En Nova, fusionamos innovación y creatividad para ofrecer soluciones tecnológicas y de diseño digital únicas, adaptadas a las necesidades de cada cliente.</p>
+            </div>
+            <div class="column-list">
+                <h3>Páginas</h3>
+                <ul>
+                    <li><a href="">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Contacto<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+            <div class="column-list">
+                <h3>Siguenos</h3>
+                <ul>
+                    <li><a href="">Instagram<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Facebook<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Twitter<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="">Linkedin<i class="las la-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
