--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -28,22 +28,27 @@
     </header>
 
     <main>
-        <section>
-            <p>Servicios</p>
+        <section class="service-page">
+            <div class="s-page-content">
+                <p class="min-text">Servicios</p>
             <h1>soluciones creativas</h1>
             <p>En Nova, ofrecemos servicios creativos que hacen que tu marca destaque en el mercado. Cada servicio está adaptado para garantizar resultados excepcionales.</p>
+            </div>
+            <div class="btn-explore">
+                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+            </div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <div>
+        <section class="p-service-content">
+            <div class="title-service">
                 <h2>Diseño gráfico</h2>
-                <p>Transformamos visiones en realidad visual</p>
+                <p class="min-text">Transformamos visiones en realidad visual</p>
             </div>
-            <div>
+            <div class="text-service">
                 <p>Nuestro equipo de diseñadores gráficos talentosos está dedicado a crear identidades visuales impactantes que resuenen con tu audiencia. Desde logotipos y branding hasta materiales de marketing, trabajamos para asegurar que cada elemento visual de tu marca sea cohesivo y memorable.</p>
-                <p>Servicios incluidos</p>
+                <p>Servicios incluidos:</p>
                 <ul>
                     <li>
                         Branding y identidad visual: Desarrollamos marcas sólidas que comunican la esencia de tu empresa.
@@ -61,15 +66,16 @@
             </div>
         </section>
 
-        <section></section>
-        <section>
-            <div>
+        <section class="parallax"></section>
+
+        <section class="p-service-content">
+            <div class="title-service">
                 <h2>Desarrollo web</h2>
-                <p>Construimos experiencias digitales excepcionales</p>
+                <p class="min-text">Construimos experiencias digitales excepcionales</p>
             </div>
-            <div>
+            <div class="text-service">
                 <p>Nuestro equipo de desarrollo web se especializa en crear sitios web personalizados que no solo se ven bien, sino que también ofrecen una experiencia de usuario óptima. Utilizando las últimas tecnologías, nos aseguramos de que tu sitio web sea funcional, atractivo y fácil de usar.</p>
-                <p>Servicios incluidos</p>
+                <p>Servicios incluidos:</p>
                 <ul>
                     <li>
                         Desarrollo de sitios web personalizados: Creamos sitios web a medida que se alinean con tus objetivos comerciales.
@@ -87,15 +93,16 @@
             </div>
         </section>
 
-        <section></section>
-        <section>
-            <div>
+        <section class="parallax"></section>
+
+        <section class="p-service-content">
+            <div class="title-service">
                 <h2>Marketing digital</h2>
-                <p>Impulsamos tu marca al siguiente nivel</p>
+                <p class="min-text">Impulsamos tu marca al siguiente nivel</p>
             </div>
-            <div>
+            <div class="text-service">
                 <p>En Nova, nuestras estrategias de marketing digital están diseñadas para aumentar tu visibilidad, atraer a tu audiencia objetivo y convertir prospectos en clientes leales. Combinamos creatividad con análisis de datos para crear campañas efectivas y medibles.</p>
-                <p>Servicios incluidos</p>
+                <p>Servicios incluidos:</p>
                 <ul>
                     <li>
                         Estrategia de marketing digital: Desarrollamos planes personalizados que alinean con tus objetivos comerciales.
@@ -113,7 +120,7 @@
             </div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
         
         <section class="contact">
             <div class="contact-content">
