--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -28,40 +28,64 @@
     </header>
     
     <main>
-        <section>
-            <h1>Proyectos en acción</h1>
-            <p>En Nova, cada proyecto es una oportunidad para demostrar nuestra creatividad y compromiso con la excelencia. Aquí te mostramos algunos de nuestros trabajos más destacados que reflejan la diversidad y calidad de nuestros servicios.</p>
-            <div></div>
+        <section class="project-page">
+            <div class="p-page-content">
+                <h1>Proyectos en acción</h1>
+                <p>En Nova, cada proyecto es una oportunidad para demostrar nuestra creatividad y compromiso con la excelencia. Aquí te mostramos algunos de nuestros trabajos más destacados que reflejan la diversidad y calidad de nuestros servicios.</p>
+            </div>
+            <div class="btn-explore">
+                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+            </div>
         </section>
 
-        <section>
-            <h2>Fashion hub</h2>
-            <p>Creamos una identidad visual y estrategia de marketing digital para una boutique de moda. Esto resultó en un aumento del tráfico en redes sociales y mayores ventas en la tienda.</p>
-            <div></div>
+        <section class="parallax-text">
+            <div class="overlay">
+                <h2>Fashion hub</h2>
+                <p>Creamos una identidad visual y estrategia de marketing digital para una boutique de moda. Esto resultó en un aumento del tráfico en redes sociales y mayores ventas en la tienda.</p>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
+            </div>
         </section>
 
-        <section>
-            <h2>Learn online</h2>
-            <p>Desarrollamos un portal educativo interactivo para una institución académica. La plataforma mejoró la retención de estudiantes y aumentó las inscripciones.</p>
-            <div></div>
+        <section class="parallax-text">
+            <div class="overlay">
+                <h2>Learn online</h2>
+                <p>Desarrollamos un portal educativo interactivo para una institución académica. La plataforma mejoró la retención de estudiantes y aumentó las inscripciones.</p>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
+            </div>
         </section>
 
-        <section>
-            <h2>Artisan crafts</h2>
-            <p>Diseñamos una tienda en línea para una marca de productos artesanales. Esto llevó a un notable incremento en las ventas en el primer año.</p>
-            <div></div>
+        <section class="parallax-text">
+            <div class="overlay">
+                <h2>Artisan crafts</h2>
+                <p>Diseñamos una tienda en línea para una marca de productos artesanales. Esto llevó a un notable incremento en las ventas en el primer año.</p>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
+            </div>
         </section>
 
-        <section>
-            <h2>Travel explorer</h2>
-            <p>Creamos una plataforma de viajes que conecta a usuarios con experiencias únicas. Incluimos un blog que ayudó a aumentar la base de usuarios registrados.</p>
-            <div></div>
+        <section class="parallax-text">
+            <div class="overlay">
+                <h2>Travel explorer</h2>
+                <p>Creamos una plataforma de viajes que conecta a usuarios con experiencias únicas. Incluimos un blog que ayudó a aumentar la base de usuarios registrados.</p>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
+            </div>
         </section>
 
-        <section>
-            <h2>Healthy bites</h2>
-            <p>Desarrollamos una plataforma digital avanzada para facilitar pedidos de comida saludable, incrementando significativamente las ventas en línea y mejorando la experiencia del usuario.</p>
-            <div></div>
+        <section class="parallax-text">
+            <div class="overlay">
+                <h2>Healthy bites</h2>
+                <p>Desarrollamos una plataforma digital avanzada para facilitar pedidos de comida saludable, incrementando significativamente las ventas en línea y mejorando la experiencia del usuario.</p>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
+            </div>
         </section>
 
         <section class="contact">
