--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -161,9 +161,7 @@
                 </ul>
             </div>
         </div>
-        <div class="copyright">
-            <p>2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
-        </div>
+        <p class="copyright">2024 | Nova Website por Martina Salvatierra - Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
