--- a/paginas/acerca-de.html
+++ b/paginas/acerca-de.html
@@ -28,39 +28,43 @@
     </header>
 
     <main>
-        <section>
-            <p>Acerca de</p>
-            <h1>Nova</h1>
-            <p>En Nova, creemos que la creatividad es la chispa que impulsa el éxito de cada marca. Desde nuestra fundación, nos hemos dedicado a ofrecer soluciones innovadoras que ayudan a nuestros clientes a destacar en un mercado competitivo.</p>
-            <div></div>
+        <section class="about-me-page">
+            <div class="am-page-content">
+                <p class="min-text">Acerca de</p>
+                <h1>Nova</h1>
+                <p>En Nova, creemos que la creatividad es la chispa que impulsa el éxito de cada marca. Desde nuestra fundación, nos hemos dedicado a ofrecer soluciones innovadoras que ayudan a nuestros clientes a destacar en un mercado competitivo.</p>
+            </div>
+            <div class="btn-explore">
+                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+            </div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <p>Nuestra historia</p>
+        <section class="am-text-content">
+            <p class="min-text">Nuestra historia</p>
             <h2>Raíces de innovación</h2>
             <p>Nova fue fundada en 2015 con la visión de redefinir el concepto de agencia creativa. Lo que comenzó como un pequeño equipo apasionado ha crecido hasta convertirse en una agencia de servicio completo. Desde el diseño gráfico hasta el desarrollo web, marketing y producción audiovisual, hemos expandido nuestra oferta de servicios, siempre manteniendo un enfoque en la calidad y la originalidad.</p>
             <p>En nuestros primeros años, nos enfocamos en proyectos locales, ayudando a pequeñas empresas a establecer una presencia en línea y a mejorar su imagen de marca. Con el tiempo, nuestra reputación por entregar trabajos de alta calidad y creatividad nos permitió atraer a clientes más grandes y diversificados, expandiéndonos a nivel nacional e internacional. Esta evolución ha sido guiada por nuestro compromiso constante con la innovación y la excelencia en todo lo que hacemos.</p>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <div></div>
-            <div>
-                <p>Nuestra misión</p>
+        <section class="am-text-img-content">
+            <div class="am-img-1-content"></div>
+            <div class="am-text-2-content">
+                <p class="min-text">Nuestra misión</p>
                 <h2>Transformando ideas en realidad</h2>
                 <p>Nuestra misión es clara: transformar ideas en experiencias memorables. Nos comprometemos a crear soluciones personalizadas que no solo sean visualmente atractivas, sino que también generen un impacto real en los objetivos de nuestros clientes.</p>
                 <p>Cada proyecto es una oportunidad para explorar nuevas fronteras creativas y para innovar, asegurando que cada cliente se sienta escuchado y comprendido.</p>
             </div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <div>
-                <p>Nuestros valores</p>
+        <section class="am-text-img-content">
+            <div class="am-text-2-content">
+                <p class="min-text">Nuestros valores</p>
                 <h2>Principios fundamentales</h2>
                 <ul>
                     <li>Creatividad: Buscamos constantemente nuevas formas de innovar y sorprender.</li>
@@ -69,16 +73,46 @@
                     <li>Integridad: Mantenemos transparencia y honestidad en todas nuestras interacciones.</li>
                 </ul>
             </div>
-            <div></div>
+            <div class="am-img-2-content"></div>
         </section>
 
-        <section></section>
+        <section class="parallax"></section>
 
-        <section>
-            <p>Nuestro equipo</p>
-            <h2>Talento creativo a tu servicio</h2>
-            <p>En Nova, nuestro equipo es nuestra mayor fortaleza. Contamos con un grupo diverso de profesionales apasionados por su trabajo, cada uno aportando habilidades únicas y perspectivas frescas.</p>
-            <div></div>
+        <section class="team">
+            <div class="team-content">
+                <p class="min-text">Nuestro equipo</p>
+                <h2>Talento creativo a tu servicio</h2>
+                <p>En Nova, nuestro equipo es nuestra mayor fortaleza. Contamos con un grupo diverso de profesionales apasionados por su trabajo, cada uno aportando habilidades únicas y perspectivas frescas.</p>
+            </div>
+            <div class="team-img-content">
+                <div class="team-1">
+                    <h3>Sofía Martínez</h3>
+                    <p>Diseñadora gráfica</p>
+                    <ul>
+                        <li><a href=""><i class="lab la-instagram"></i></a></li>
+                        <li><a href=""><i class="lab la-linkedin-in"></i></a></li>
+                        <li><a href=""><i class="lab la-behance"></i></a></li>
+                    </ul>
+                </div>
+                <div class="team-2">
+                    <h3>Carlos Hernández</h3>
+                    <p>Desarrollador web</p>
+                    <ul>
+                        <li><a href=""><i class="lab la-instagram"></i></a></li>
+                        <li><a href=""><i class="lab la-linkedin-in"></i></a></li>
+                        <li><a href=""><i class="lab la-github"></i></a></li>
+                    </ul>
+                </div>
+                <div class="team-3">
+                    <h3>Laura Gómez</h3>
+                    <p>Especialista en marketing digital</p>
+                    <ul>
+                        <li><a href=""><i class="lab la-instagram"></i></a></li>
+                        <li><a href=""><i class="lab la-linkedin-in"></i></a></li>
+                        <li><a href=""><i class="lab la-twitter"></i></a></li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
         <section class="contact">
