--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -28,55 +28,63 @@
     </header>
 
     <main>
-        <section>
-            <h1>Explora el mundo del diseño y la tecnología</h1>
-            <p>Descubre artículos informativos y inspiradores sobre tecnología, diseño digital y creatividad. Mantente al día con las últimas tendencias y consejos prácticos para impulsar tu proyecto digital hacia el éxito.</p>
-            <div></div>
+        <section class="project-page blog-page">
+            <div class="p-page-content">
+                <h1>Explora el mundo del diseño y la tecnología</h1>
+                <p>Descubre artículos informativos y inspiradores sobre tecnología, diseño digital y creatividad. Mantente al día con las últimas tendencias y consejos prácticos para impulsar tu proyecto digital hacia el éxito.</p>
+            </div>
+            <div class="btn-explore">
+                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+            </div>
         </section>
 
-        <section>
-            <h2>Tendencias Emergentes en Diseño Web para el 2024</h2>
-            <p>Explora las últimas tendencias en diseño web que están configurando el panorama digital este año, incluyendo temas como el diseño responsivo, la tipografía avanzada y la accesibilidad mejorada.</p>
-            <div></div>
-        </section>
-
-        <section>
-            <div>
+        <section class="parallax-text blog-parallax">
+            <div class="overlay">
                 <h2>¿Cómo mejorar la experiencia del usuario en tu sitio web?</h2>
                 <p>Descubre estrategias prácticas y efectivas para optimizar la experiencia del usuario en tu sitio web, desde la navegación hasta el diseño de interfaz.</p>
-                <div></div>
-            </div>
-
-            <div>
-                <h2>Introducción a la realidad aumentada en aplicaciones móviles</h2>
-                <p>Aprende cómo la realidad aumentada está cambiando la forma en que interactuamos con las aplicaciones móviles, proporcionando experiencias más inmersivas y personalizadas.</p>
-                <div></div>
-            </div>
-
-            <div>
-                <h2>Consejos para crear contenido visualmente atractivo en redes sociales</h2>
-                <p>Obtén consejos prácticos y herramientas para diseñar contenido visual impactante que capture la atención y genere engagement en plataformas de redes sociales.</p>
-                <div></div>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
             </div>
         </section>
 
-        <section>
-            <div>
+        <section class="parallax-text blog-parallax">
+            <div class="overlay">
+                <h2>Introducción a la realidad aumentada en aplicaciones móviles</h2>
+                <p>Aprende cómo la realidad aumentada está cambiando la forma en que interactuamos con las aplicaciones móviles, proporcionando experiencias más inmersivas y personalizadas.</p>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="parallax-text blog-parallax">
+            <div class="overlay">
                 <h2>Impacto de la inteligencia artificial en el marketing digital</h2>
                 <p>Descubre cómo la inteligencia artificial está transformando el marketing digital, desde la personalización de contenidos hasta la automatización de campañas.</p>
-                <div></div>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
             </div>
+        </section>
 
-            <div>
+        <section class="parallax-text blog-parallax">    
+            <div class="overlay">
                 <h2>El futuro del eCommerce: Tendencias y tecnologías disruptivas</h2>
                 <p>Analiza las tendencias emergentes y las tecnologías disruptivas que están modelando el futuro del comercio electrónico y cómo puedes adaptarte para aprovecharlas.</p>
-                <div></div>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
             </div>
-
-            <div>
+        </section>
+        
+        <section class="parallax-text blog-parallax">
+            <div class="overlay">
                 <h2>Diseño audiovisual: Integrando sonido y video en experiencias digitales</h2>
                 <p>Explora cómo integrar de manera efectiva elementos audiovisuales en tus proyectos digitales para crear experiencias más inmersivas y atractivas para los usuarios.</p>
-                <div></div>
+                <div class="btn-explore">
+                    <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                </div>
             </div>
         </section>
 
