--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <a href="">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="">inicio</a></li>
-                <li><a href="">Servicios</a></li>
-                <li><a href="">Proyectos</a></li>
-                <li><a href="">Acerca de</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="./index.html">inicio</a></li>
+                <li><a href="./paginas/servicios.html">Servicios</a></li>
+                <li><a href="./paginas/proyectos.html">Proyectos</a></li>
+                <li><a href="./paginas/acerca-de.html">Acerca de</a></li>
+                <li><a href="./paginas/blog.html">Blog</a></li>
             </ul>
             <div class="btn-black">
-                <a href="">Contacto</a>
+                <a href="./paginas/contacto.html">Contacto</a>
             </div>
         </nav>
     </header>
@@ -43,7 +43,7 @@
                 <h2>Nuestras<br>soluciones creativas</h2>
                 <p>Explora nuestros servicios diseñados para llevar tu proyecto al siguiente nivel.</p>
                 <div class="btn-vm">
-                    <a href="">Ver más<i class="las la-arrow-down"></i></a>
+                    <a href="./paginas/servicios.html">Ver más<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
             <div class="services-img-content">
@@ -65,7 +65,7 @@
                 <h2>Proyectos en los<br>que estamos orgullosos</h2>
                 <p>Descubre cómo hemos transformado las ideas de<br>nuestros clientes en éxitos tangibles.</p>
                 <div class="btn-vm">
-                    <a href="">Ver más<i class="las la-arrow-down"></i></a>
+                    <a href="./paginas/proyectos.html">Ver más<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
             <div class="projects-img-content">
@@ -176,7 +176,7 @@
                 <p class="min-text">Blog</p>
                 <h2>Mantente al día con las últimas tendencias y consejos en nuestra industria</h2>
                 <div class="btn-vm">
-                    <a href="">Ver más<i class="las la-arrow-down"></i></a>
+                    <a href="./paginas/blog.html">Ver más<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
             <div class="blogs-img-content">
@@ -201,7 +201,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="./paginas/contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
@@ -216,12 +216,12 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="">Inicio<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Servicios<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Proyectos<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Acerca de<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Blog<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Contacto<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./paginas/servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./paginas/proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./paginas/acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./paginas/blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./paginas/contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
                 </ul>
             </div>
             <div class="column-list">
