--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,17 +12,17 @@
     <header>
         <nav>
             <div class="logo-site">
-                <a href="">Nova</a>
+                <a href="../index.html">Nova</a>
             </div>
             <ul class="nav-links">
-                <li><a href="">inicio</a></li>
-                <li><a href="">Servicios</a></li>
-                <li><a href="">Proyectos</a></li>
-                <li><a href="">Acerca de</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="./servicios.html">Servicios</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
+                <li><a href="./acerca-de.html">Acerca de</a></li>
+                <li><a href="./blog.html">Blog</a></li>
             </ul>
             <div class="btn-black">
-                <a href="">Contacto</a>
+                <a href="./contacto.html">Contacto</a>
             </div>
         </nav>
     </header>
@@ -100,12 +100,12 @@
             <div class="column-list">
                 <h3>Páginas</h3>
                 <ul>
-                    <li><a href="">Inicio<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Servicios<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Proyectos<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Acerca de<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Blog<i class="las la-arrow-down"></i></a></li>
-                    <li><a href="">Contacto<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="../index.html">Inicio<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./servicios.html">Servicios<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./proyectos.html">Proyectos<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./acerca-de.html">Acerca de<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./blog.html">Blog<i class="las la-arrow-down"></i></a></li>
+                    <li><a href="./contacto.html">Contacto<i class="las la-arrow-down"></i></a></li>
                 </ul>
             </div>
             <div class="column-list">
