--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -38,7 +38,7 @@
             </div>
         </section>
 
-        <section class="parallax-text">
+        <section class="first-project parallax-text">
             <div class="overlay">
                 <h2>Fashion hub</h2>
                 <p>Creamos una identidad visual y estrategia de marketing digital para una boutique de moda. Esto resultó en un aumento del tráfico en redes sociales y mayores ventas en la tienda.</p>
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <section class="parallax-text">
+        <section class="second-project parallax-text">
             <div class="overlay">
                 <h2>Learn online</h2>
                 <p>Desarrollamos un portal educativo interactivo para una institución académica. La plataforma mejoró la retención de estudiantes y aumentó las inscripciones.</p>
@@ -58,7 +58,7 @@
             </div>
         </section>
 
-        <section class="parallax-text">
+        <section class="third-project parallax-text">
             <div class="overlay">
                 <h2>Artisan crafts</h2>
                 <p>Diseñamos una tienda en línea para una marca de productos artesanales. Esto llevó a un notable incremento en las ventas en el primer año.</p>
@@ -68,7 +68,7 @@
             </div>
         </section>
 
-        <section class="parallax-text">
+        <section class="fourth-project parallax-text">
             <div class="overlay">
                 <h2>Travel explorer</h2>
                 <p>Creamos una plataforma de viajes que conecta a usuarios con experiencias únicas. Incluimos un blog que ayudó a aumentar la base de usuarios registrados.</p>
@@ -78,7 +78,7 @@
             </div>
         </section>
 
-        <section class="parallax-text">
+        <section class="fifth-project parallax-text">
             <div class="overlay">
                 <h2>Healthy bites</h2>
                 <p>Desarrollamos una plataforma digital avanzada para facilitar pedidos de comida saludable, incrementando significativamente las ventas en línea y mejorando la experiencia del usuario.</p>
