--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero hero-pink parallax-text">
             <div class="hero-content">
                 <h1>Transforma tus ideas en experiencias innovadoras</h1>
                 <p>En Nova, fusionamos creatividad y tecnología para impulsar tu marca.<br>Descubre cómo podemos ayudarte a destacar en el mercado.</p>
             </div>
             <div class="btn-explore">
-                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                <a href="#s-services"><i class="las la-arrow-down"></i>Explorar</a>
             </div>
         </section>
 
-        <section class="services">
+        <section class="services" id="s-services">
             <div class="services-content">
                 <p class="min-text">Servicios</p>
                 <h2>Nuestras<br>soluciones creativas</h2>
@@ -47,13 +47,13 @@
                 </div>
             </div>
             <div class="services-img-content">
-                <div class="img-service-1">
+                <div class="img-service-1 parallax-text">
                     <p>Diseño gráfico</p>
                 </div>
-                <div class="img-service-2">
+                <div class="img-service-2 parallax-text">
                     <p>Desarrollo web</p>
                 </div>
-                <div class="img-service-3">
+                <div class="img-service-3 parallax-text">
                     <p>Marketing digital</p>
                 </div>
             </div>
@@ -69,19 +69,19 @@
                 </div>
             </div>
             <div class="projects-img-content">
-                <div class="img-project-1">
+                <div class="img-project-1  parallax">
                     <h3>Fashion hub</h3>
                     <div class="btn-explore">
                         <a href=""><i class="las la-arrow-down"></i>Explorar</a>
                     </div>
                 </div>
-                <div class="img-project-2">
+                <div class="img-project-2 parallax">
                     <h3>Learn online</h3>
                     <div class="btn-explore">
                         <a href=""><i class="las la-arrow-down"></i>Explorar</a>
                     </div>
                 </div>
-                <div class="img-project-3">
+                <div class="img-project-3 parallax">
                     <h3>Artisan crafts</h3>
                     <div class="btn-explore">
                         <a href=""><i class="las la-arrow-down"></i>Explorar</a>
@@ -180,16 +180,16 @@
                 </div>
             </div>
             <div class="blogs-img-content">
-                <div class="img-blog-1">
-                    <i class="las la-arrow-down btn-arrow"></i>
+                <div class="img-blog-1 parallax-text">
+                    <a href=""><i class="las la-arrow-down btn-arrow"></i></a>
                     <h3>¿Cómo mejorar la experiencia del usuario en tu sitio web?</h3>
                 </div>
-                <div class="img-blog-2">
-                    <i class="las la-arrow-down btn-arrow"></i>
+                <div class="img-blog-2 parallax-text">
+                    <a href=""><i class="las la-arrow-down btn-arrow"></i></a>
                     <h3>Introducción a la realidad aumentada en aplicaciones móviles</h3>
                 </div>
-                <div class="img-blog-3">
-                    <i class="las la-arrow-down btn-arrow"></i>
+                <div class="img-blog-3 parallax-text">
+                    <a href=""><i class="las la-arrow-down btn-arrow"></i></a>
                     <h3>Impacto de la inteligencia artificial en el marketing digital</h3>
                 </div>
             </div>
