--- a/paginas/acerca-de.html
+++ b/paginas/acerca-de.html
@@ -35,13 +35,13 @@
                 <p>En Nova, creemos que la creatividad es la chispa que impulsa el éxito de cada marca. Desde nuestra fundación, nos hemos dedicado a ofrecer soluciones innovadoras que ayudan a nuestros clientes a destacar en un mercado competitivo.</p>
             </div>
             <div class="btn-explore">
-                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                <a href="#p-about"><i class="las la-arrow-down"></i>Explorar</a>
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="hero-pink parallax"></section>
 
-        <section class="am-text-content">
+        <section class="am-text-content" id="p-about">
             <p class="min-text">Nuestra historia</p>
             <h2>Raíces de innovación</h2>
             <p>Nova fue fundada en 2015 con la visión de redefinir el concepto de agencia creativa. Lo que comenzó como un pequeño equipo apasionado ha crecido hasta convertirse en una agencia de servicio completo. Desde el diseño gráfico hasta el desarrollo web, marketing y producción audiovisual, hemos expandido nuestra oferta de servicios, siempre manteniendo un enfoque en la calidad y la originalidad.</p>
@@ -121,7 +121,7 @@
                 <h2>¡Conéctate con nosotros!</h2>
                 <p>Estamos aquí para ayudarte.<br>Ponte en contacto para cualquier consulta o proyecto.<br>¡Nos encantaría saber de ti!</p>
                 <div class="btn-contact">
-                    <a href="">Hablemos<i class="las la-arrow-down"></i></a>
+                    <a href="../paginas/contacto.html">Hablemos<i class="las la-arrow-down"></i></a>
                 </div>
             </div>
         </section>
