--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -34,11 +34,11 @@
                 <p>En Nova, cada proyecto es una oportunidad para demostrar nuestra creatividad y compromiso con la excelencia. Aquí te mostramos algunos de nuestros trabajos más destacados que reflejan la diversidad y calidad de nuestros servicios.</p>
             </div>
             <div class="btn-explore">
-                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                <a href="#p-project"><i class="las la-arrow-down"></i>Explorar</a>
             </div>
         </section>
 
-        <section class="first-project parallax-text">
+        <section class="first-project parallax-text" id="p-project">
             <div class="overlay">
                 <h2>Fashion hub</h2>
                 <p>Creamos una identidad visual y estrategia de marketing digital para una boutique de moda. Esto resultó en un aumento del tráfico en redes sociales y mayores ventas en la tienda.</p>
