--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -35,13 +35,13 @@
                 <p>En Nova, ofrecemos servicios creativos que hacen que tu marca destaque en el mercado. Cada servicio está adaptado para garantizar resultados excepcionales.</p>
             </div>
             <div class="btn-explore">
-                <a href=""><i class="las la-arrow-down"></i>Explorar</a>
+                <a href="#p-service"><i class="las la-arrow-down"></i>Explorar</a>
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="hero-pink parallax"></section>
 
-        <section class="p-service-content">
+        <section class="p-service-content" id="p-service">
             <div class="title-service">
                 <h2>Diseño gráfico</h2>
                 <p class="min-text">Transformamos visiones en realidad visual</p>
@@ -66,7 +66,7 @@
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="service-1 parallax"></section>
 
         <section class="p-service-content">
             <div class="title-service">
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="service-2 parallax"></section>
 
         <section class="p-service-content">
             <div class="title-service">
@@ -120,7 +120,7 @@
             </div>
         </section>
 
-        <section class="parallax"></section>
+        <section class="service-3 parallax"></section>
         
         <section class="contact">
             <div class="contact-content">
